; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/qcommon/extr_net_chan.c_Netchan_Init.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/qcommon/extr_net_chan.c_Netchan_Init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [12 x i8] c"showpackets\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"0\00", align 1
@CVAR_TEMP = common dso_local global i32 0, align 4
@showpackets = common dso_local global i8* null, align 8
@.str.2 = private unnamed_addr constant [9 x i8] c"showdrop\00", align 1
@showdrop = common dso_local global i8* null, align 8
@.str.3 = private unnamed_addr constant [10 x i8] c"net_qport\00", align 1
@.str.4 = private unnamed_addr constant [3 x i8] c"%i\00", align 1
@CVAR_INIT = common dso_local global i32 0, align 4
@qport = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @Netchan_Init(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* %2, align 4
  %4 = and i32 %3, 65535
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* @CVAR_TEMP, align 4
  %6 = call i8* @Cvar_Get(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32 %5)
  store i8* %6, i8** @showpackets, align 8
  %7 = load i32, i32* @CVAR_TEMP, align 4
  %8 = call i8* @Cvar_Get(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0), i32 %7)
  store i8* %8, i8** @showdrop, align 8
  %9 = load i32, i32* %2, align 4
  %10 = call i8* @va(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.4, i64 0, i64 0), i32 %9)
  %11 = load i32, i32* @CVAR_INIT, align 4
  %12 = call i8* @Cvar_Get(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.3, i64 0, i64 0), i8* %10, i32 %11)
  store i8* %12, i8** @qport, align 8
  ret void
}

declare dso_local i8* @Cvar_Get(i8*, i8*, i32) #1

declare dso_local i8* @va(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
